# Lannootree

./: .env  .env-example  .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: njsscan.yml
API/: index.js  package-lock.json  package.json
API/backend-api/: backend-api.js
API/controller/: controller.js
API/low-end/: low-end.js
API/processor/: processor.js
Lannootree_controller/: docker-compose.yml
Lannootree_controller/client-api/: Dockerfile  client-api.js  package.json
Lannootree_controller/config-webpage/: Dockerfile  package-lock.json  package.json
Lannootree_controller/controller-nodejs/: readme.md
Lannootree_firmware/: .env  README.md  config-example.json  config.json  docker-compose.yml
Lannootree_firmware/led-driver/: CMakeLists.txt  Dockerfile  README.md
Lannootree_firmware/led-driver/ProjectFiles/: CMakeLists.txt  main.cpp
Lannootree_firmware/led-driver/ProjectFiles/src/: lannootree.cpp  led_driver_thread.cpp
Lannootree_firmware/led-driver/ProjectFiles/src/include/: lannootree.hpp  led_driver_thread.hpp
Lannootree_firmware/led-driver/ProjectFiles/utils/: CMakeLists.txt  led_buffer.cpp  logger.cpp  unix_socket.cpp
Lannootree_firmware/led-driver/ProjectFiles/utils/include/: color.hpp  lannootree_config.hpp  lannootree_config.hpp.in  led_buffer.hpp  logger.hpp  matrix.hpp  semaphore.hpp  terminal_colors.hpp  thread_starter.hpp  unix_socket.hpp
Lannootree_firmware/led-driver/docs/Doxygen/: Doxyfile.cfg
Lannootree_firmware/led-driver/rpi_ws281x/: CMakeLists.txt  rpihw.h  ws2811.c  ws2811.h
Lannootree_firmware/led_driver/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  config.json  test.js  test.json
Lannootree_firmware/led_driver/ProjectFiles/: CMakeLists.txt  main.cpp  main0.cpp
Lannootree_firmware/led_driver/ProjectFiles/src/: CMakeLists.txt  lannootree.cpp  led_driver_thread.cpp  socket_thread.cpp  unix_socket.cpp
Lannootree_firmware/led_driver/ProjectFiles/src/Lannootree/: CMakeLists.txt  lannootree.cpp
Lannootree_firmware/led_driver/ProjectFiles/src/Lannootree/include/: lannootree.hpp
Lannootree_firmware/led_driver/ProjectFiles/src/communication/: socket.cpp
Lannootree_firmware/led_driver/ProjectFiles/src/controll/: CMakeLists.txt
Lannootree_firmware/led_driver/ProjectFiles/src/include/: lannootree.hpp  led_driver_thread.hpp  socket_thread.hpp  unix_socket.hpp
Lannootree_firmware/led_driver/ProjectFiles/utils/: CMakeLists.txt  led_buffer.cpp  logger.cpp  thread_starter.cpp  unix_socket.cpp
Lannootree_firmware/led_driver/ProjectFiles/utils/include/: color.hpp  i_thread_object.hpp  lannootree_config.hpp  lannootree_config.hpp.in  led_buffer.hpp  logger.hpp  matrix.hpp  queue.hpp  thread_starter.hpp
Lannootree_firmware/led_driver/rpi_ws281x/: README.md  clk.h  dma.h  gpio.h  pcm.h  pwm.h  version.h.in  ws2811.c  ws2811.h
Lannootree_hardware/: README.md
Lannootree_processor/: README.md  docker-compose.yml
Lannootree_processor/voronoizer/: CMakeLists.txt  Dockerfile  Makefile  Performance.txt  README.md  config.json
Lannootree_processor/voronoizer/mqttConn/: index.js  package-lock.json  package.json
Lannootree_processor/voronoizer/saves/: processed.json  processed000.avi
Lannootree_processor/voronoizer/src/: CMakeLists.txt  camera.cpp  main.cpp  redis-frame-provide.cpp  voroniozer.cpp
Lannootree_processor/voronoizer/src/cuda-kernels/: CMakeLists.txt  mean-masked.cu
Lannootree_processor/voronoizer/src/cuda-kernels/include/: mean-masked.hpp
Lannootree_processor/voronoizer/src/formatters/: CMakeLists.txt  auto-redis-formatter.cpp  json-file-formatter.cpp  json-mqtt-formatter.cpp  json-redis-formatter.cpp
Lannootree_processor/voronoizer/src/formatters/include/: auto-redis-formatter.hpp  formatter.hpp  json-file-formatter.hpp  json-mqtt-formatter.hpp  json-redis-formatter.hpp
Lannootree_processor/voronoizer/src/frame-providers/: CMakeLists.txt  CMakeLists.txt~Stashed changes  camera.cpp  redis-frame-provider.cpp  single-image-provider.cpp
Lannootree_processor/voronoizer/src/frame-providers/include/: camera.hpp  frame-provider.hpp  redis-frame-provider.hpp  single-image-provider.hpp
Lannootree_processor/voronoizer/src/include/: camera.hpp  frame-provider.hpp  redis-frame-provider.hpp  voroniozer.hpp
Lannootree_processor/voronoizer/src/libs/: CMakeLists.txt  threadpool.cpp
Lannootree_processor/voronoizer/src/libs/include/: threadpool.hpp  timer.hpp
Lannootree_processor/voronoizer/src/voronoizer/: CMakeLists.txt  voronoizer-arguments.cpp  voronoizer-arguments.cpp~Stashed changes  voronoizer-cuda-processing.cu  voronoizer.cpp  voronoizer.cpp~Stashed changes
Lannootree_processor/voronoizer/src/voronoizer/include/: version.hpp  version.hpp.in  voroniozer.hpp  voronoizer-aruments.hpp  voronoizer-cuda-processing.hpp
Lannootree_processor/voronoizer/tests/: screenCapToRedis.py
Lannootree_server/: .env  .env-example  README.md  config-example.json  config.json  docker-compose.yml  package-lock.json  readme.md
certs/: README.md  docker-compose.yml  generate_certs.sh  generate_client_certs.sh  generate_server_certs.sh  get_ca.sh  sign_new_clients.sh
certs/certs/: get_ca.sh  (+1 more)
controller/: docker-compose.yml  dockerfile  package.json
firmware/: CMakeLists.txt  README.md
frontend/: api-connection.js  index.html  script.js  style.css  upload.php
img/: README.md
lannootree_config/: Dockerfile  README.md  package-lock.json  package.json
lannootree_firmware/: CMakeLists.txt  README.md
lannootree_firmware/ProjectFiles/src/: CMakeLists.txt
lannootree_firmware/config/: CMakeLists.txt
lannootree_firmware/led_controller/: test.json
lannootree_firmware/led_controller/ProjectFiles/: CMakeLists.txt
lannootree_firmware/led_controller/ProjectFiles/src/controll/: ledstrip_controller.cpp
lannootree_firmware/led_controller/ProjectFiles/src/controll/include/: ledstrip_controller.hpp
lannootree_firmware/led_controller/rpi_ws281x/: CMakeLists.txt
lannootree_firmware/mqtt2redis/: Dockerfile  README.md  mosquitto.conf
(+392 files in other folders)
